# Develop

./: .gitignore
C++/: complete_main.asm  complete_main.cpp  test.cpp
C++/Skillbox/: 14.6_2.cpp  basket.txt  l10.5_1.cpp  l11.6_1.cpp  l11.6_2.cpp  l11.6_3.cpp  l12.5_1.cpp  l12.5_2.cpp  l12.5_3.cpp  l12.5_4.cpp  l13.1_1.cpp  l13.1_2.cpp  l13.1_3.cpp  l13.2_1.cpp  l13.2_2.cpp  l13.2_3.cpp  l13.3_1.cpp  l13.4_1.cpp  l13.4_2.cpp  l13.4_3.cpp  l13.6_1.cpp  l13.6_2.cpp  l13.6_3.cpp  l14.6_1.cpp  l14.6_3.cpp  l14.6_4.cpp  l14.6_5.cpp  l14.6_6.cpp  l14.6_7.cpp  l14.6_8.cpp  l15.6_1.cpp  l15.6_2.cpp  l15.6_3.cpp  l15.6_4.cpp  l16.6_1.cpp  l16.6_2.cpp  l16.6_3.cpp  l16.6_4.cpp  l16.6_5.cpp  l17.4_1.cpp  (+33 more)
C++/Skillbox/CompSim/: CMakeLists.txt
C++/Skillbox/CompSim/include/: command.h  disk.h  gpu.h  kbd.h  ram.h
C++/Skillbox/CompSim/src/: CMakeLists.txt  command.cpp  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
C++/Skillbox/Simulator/: CMakeLists.txt
C++/Skillbox/Simulator/include/: commands.h  struct.h
C++/Skillbox/Simulator/src/: CMakeLists.txt  main.cpp
